# rust_learning_samples

./: Cargo.toml  README.md  build.rs
common/: Cargo.toml
common/src/: main.rs.bck
common/src/logger/: log_entry.rs  log_type.rs  logs_manager.rs
common/src/tools/: console.rs  db.rs
q1_theory/: Cargo.toml  build.rs  style.slint
src/: lib.rs  main.rs  style.slint
src/logger/: ansi_colors.rs  log_entry.rs  log_type.rs  logs_manager.rs  mod.rs
src/tools/: chrono.rs  console.rs  db.rs  mod.rs
