[package]
name = "helmo_b1_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
slint = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }